--- a/.github/workflows/update-pull-request-label.yml
+++ b/.github/workflows/update-pull-request-label.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Update labels
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_ACTIONS_TEST_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_TEST_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
           curl -s -H "Authorization: token $GITHUB_TOKEN" \
