:hammer: @octokit/rest 설치 과정 추가

--- a/.github/workflows/update-pull-request-label-with-nodejs.yml
+++ b/.github/workflows/update-pull-request-label-with-nodejs.yml
@@ -17,7 +17,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-
+          
+      - name: Install dependencies
+        run: |
+          npm install @octokit/rest
+          
       - name: Update labels with nodejs
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_TEST_TOKEN }}
