:hammer: D-0 지날 시 :boom:으로 변경

--- a/.github/workflows/update-pull-request-label-with-nodejs.yml
+++ b/.github/workflows/update-pull-request-label-with-nodejs.yml
@@ -41,6 +41,9 @@ jobs:
                     const match = label.match(/^D-(\\d+)$/);
                     if (match) {
                       const number = parseInt(match[1], 10);
+                      if (number < 1) {
+                        return \`:boom:\`;
+                      }
                       return \`D-\${number - 1}\`;
                     }
                     return label;
