:hammer: axios 의존성 추가

--- a/.github/workflows/update-pull-request-label-with-nodejs.yml
+++ b/.github/workflows/update-pull-request-label-with-nodejs.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm install @octokit/rest
+          npm install axios
           
       - name: Update labels with nodejs
         env:
