:hammer: 알림 메시지 전송 body 및 오류 메시지 수정

--- a/.github/workflows/update-pull-request-label-with-nodejs.yml
+++ b/.github/workflows/update-pull-request-label-with-nodejs.yml
@@ -100,9 +100,11 @@ jobs:
                   });
                 }
 
-                await axios.post(process.env.SLACK_WEBHOOK_URL, JSON.stringify(labelMap));
+                await axios.post(process.env.SLACK_WEBHOOK_URL, {
+                  text: JSON.stringify(labelMap)
+                });
               } catch (error) {
-                console.error(\`Error updating labels: \${error.message}\`);
+                console.error(\`Error sending notifications: \${error.message}\`);
               }
             })();
           "
