--- a/.github/workflows/update-pull-request-label-with-nodejs.yml
+++ b/.github/workflows/update-pull-request-label-with-nodejs.yml
@@ -100,7 +100,7 @@ jobs:
                     }
 
                     prList.push({
-                      "value": `<${pull.url}|[${label.name}] ${pull.title}>`,
+                      "value": \`<\${pull.html_url}|[\${label.name}] \${pull.title}>\`,
                       "short": false
                     });
                   });
