--- a/.github/workflows/update-pull-request-label-with-nodejs.yml
+++ b/.github/workflows/update-pull-request-label-with-nodejs.yml
@@ -115,7 +115,7 @@ jobs:
                   const prCount = keys.map(key => \`*\${key}*: \${map.get(key)}\`).join('\n');
                   keys.sort();
                   message = {
-                    "text": ":rocket: 팀 여러분! 멋진 새 PR들이 여러분의 마법 같은 리뷰를 기다리고 있어요! :sparkles:",
+                    "text": '\:rocket\: 팀 여러분! 멋진 새 PR들이 여러분의 마법 같은 리뷰를 기다리고 있어요! \:sparkles\:',
                     "attachments": [
                       {
                         "color": "#36a64f",
@@ -128,13 +128,13 @@ jobs:
                   };
                 } else {
                   message = {
-                    "text": ":tada: 우와! 대기 중인 PR이 없어요! :white_check_mark:",
+                    "text": '\:tada\: 우와! 대기 중인 PR이 없어요! \:white_check_mark\:',
                     "attachments": [
                       {
                         "color": "#FF4500",
                         "title": "모두 완료!",
-                        "text": ":sparkles: 모두 처리 완료! 이제 편히 쉬거나 다음 대작을 시작해볼까요? :rocket:",
-                        "footer": "훌륭한 작업 계속 이어가세요! :fire:"
+                        "text": '\:sparkles\: 모두 처리 완료! 이제 편히 쉬거나 다음 대작을 시작해볼까요? \:rocket\:',
+                        "footer": "훌륭한 작업 계속 이어가세요! \:fire\:"
                       }
                     ]
                   };
