--- a/.github/workflows/update-pull-request-label-with-nodejs.yml
+++ b/.github/workflows/update-pull-request-label-with-nodejs.yml
@@ -112,8 +112,8 @@ jobs:
 
                 if (prList.length > 0) {
                   const keys = Array.from(labelMap.keys());
-                  const prCount = keys.map(key => \`*\${key}*: \${map.get(key)}\`).join('\n');
                   keys.sort();
+                  const prCount = keys.map(key => `${key}: ${map.get(key)}`).join('\n');
                   message = {
                     "text": '\:rocket\: 팀 여러분! 멋진 새 PR들이 여러분의 마법 같은 리뷰를 기다리고 있어요! \:sparkles\:',
                     "attachments": [
