--- a/.github/workflows/update-pull-request-label-with-nodejs.yml
+++ b/.github/workflows/update-pull-request-label-with-nodejs.yml
@@ -93,7 +93,7 @@ jobs:
                       return;
                     }
 
-                    if (labelMap[label.name] == undefined) {
+                    if (labelMap.get(label.name) == undefined) {
                       labelMap.set(label.name, 1);
                     } else {
                       labelMap.set(label.name, labelMap.get(label.name) + 1);
@@ -113,7 +113,7 @@ jobs:
                 if (prList.length > 0) {
                   const keys = Array.from(labelMap.keys());
                   keys.sort();
-                  const prCount = keys.map(key => `\${key}: \${labelMap.get(key)}`).join('\n');
+                  const prCount = keys.map(key => `${key}: ${labelMap.get(key)}`).join('\n');
                   message = {
                     "text": '\:rocket\: 팀 여러분! 멋진 새 PR들이 여러분의 마법 같은 리뷰를 기다리고 있어요! \:sparkles\:',
                     "attachments": [
