--- a/.github/workflows/update-pull-request-label-with-nodejs.yml
+++ b/.github/workflows/update-pull-request-label-with-nodejs.yml
@@ -29,7 +29,7 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
           node -e "
-            const { Octokit } = require('@octokit/rest');
+            const { Octokit } = await import('@octokit/rest');
             const octokit = new Octokit({ auth: process.env.GITHUB_TOKEN });
             const [owner, repo] = process.env.GITHUB_REPOSITORY.split('/');
             
@@ -74,8 +74,8 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.ACTIONS_TEST_SLACK_WEBHOOK_URL }}
         run: |
           node -e "
-            const axios = require('axios');
-            const { Octokit } = require('@octokit/rest');
+            import axios from 'axios';
+            const { Octokit } = await import('@octokit/rest');
             const octokit = new Octokit({ auth: process.env.GITHUB_TOKEN });
             const [owner, repo] = process.env.GITHUB_REPOSITORY.split('/');
 
