:hammer: 불필요한 await문 제거

--- a/.github/workflows/update-pull-request-label-with-nodejs.yml
+++ b/.github/workflows/update-pull-request-label-with-nodejs.yml
@@ -29,7 +29,7 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
           node -e "
-            const { Octokit } = await import('@octokit/rest');
+            const { Octokit } = import('@octokit/rest');
             const octokit = new Octokit({ auth: process.env.GITHUB_TOKEN });
             const [owner, repo] = process.env.GITHUB_REPOSITORY.split('/');
             
